fix(public) scroll bar visible on desktop

--- a/app/globals.css
+++ b/app/globals.css
@@ -361,15 +361,17 @@ Mental model: These are default visual rules of my app.
   }
 }
 
-/* Hide scrollbar but keep scrolling */
-.scroll-container {
-  overflow: auto; /* or scroll */
-  scrollbar-width: none; /* Firefox */
-  -ms-overflow-style: none; /* IE + old Edge */
-}
+@media (max-width: 768px) {
+  /* Hide scrollbar but keep scrolling */
+  .scroll-container {
+    overflow: auto; /* or scroll */
+    scrollbar-width: none; /* Firefox */
+    -ms-overflow-style: none; /* IE + old Edge */
+  }
 
-.scroll-container::-webkit-scrollbar {
-  display: none; /* Chrome, Safari, Edge (Chromium) */
+  .scroll-container::-webkit-scrollbar {
+    display: none; /* Chrome, Safari, Edge (Chromium) */
+  }
 }
 
 .overview-card-image-animation {
